test/fail/M0128.mo
actor {
  func preupgrade(foo : Bool) {}
}
